--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <audio class="swampert" preload="auto">
         <source src="./src/assets/audios/elements/pokemon/swampert.ogg"></source>
     </audio>
-    <source id="fundo_email" src="./src/assets/images/background/fundo_email.gif">    
+    <img id="fundo_email" src="./src/assets/images/background/fundo_email.gif">    
 </head>
 <body>
     <header>
