Adicionei a estampa do solgaleo

--- a/index.html
+++ b/index.html
@@ -271,7 +271,12 @@
     <footer>
         <div class="footer_left">
             <h2>Mais informações</h2>
-            <a href="mailto:atendimento@elitedos4.com?subject=E-mail%20do%20site&body=Prezados,%0D%0ASegue%20a%20dúvida.%0D%0AAtenciosamente,%0D%0A" aria-label="enviar e-mail para elite dos 4">atendimento@elitedos4.com.br</a>
+            <figure>
+                <figurecaption>atendimento@elitedos4.com.br</figurecaption>
+                <a href="mailto:atendimento@elitedos4.com?subject=E-mail%20do%20site&body=Prezados,%0D%0ASegue%20a%20dúvida.%0D%0AAtenciosamente,%0D%0A" aria-label="enviar e-mail para elite dos 4">
+                    <img src="./src/assets/images/elements/solgaleo_stamp.gif" alt="solgaleo stamp" author="https://www.deviantart.com/acrylicdolls/art/Pokemon-sun-Stamp-625722820">
+                </a>    
+            </figure>
         </div>
         <figure>
             <img src="./src/assets/images/logo/elite4.gif" alt="logo da elite dos 4">
