Adicionei animações em descrição

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
         <img class="black-friday" src="./src/assets/images/logo/logo.jpeg" alt="Black Friday Pokémon">
     </div>
     <div id="descricao">
-        <div class="descricao_text1"><p>Não consegue derrotar o líder de ginásio?</p></div>
-        <div class="descricao_text2"><p>Quer vencer a liga Pokémon?</p></div>
-        <div class="descricao_text3"><p>Não quer mais ser chamado de <strong>noobão</strong>?</p></div>
-        <div class="descricao_text4"><p>Temos a solução para você!</p></div>
-        <div class="descricao_text5"><p>A elite dos 4 tem os pokémons com os melhores <abbr title="individual values" lang="en">IVs</abbr> para você não passar mais vergonha.</p></div>
-        <div class="descricao_text6"><p>Você também pode ser <strong>campeão</strong>!</p></div>
+        <div class="descricao_text1"><h1>Não consegue derrotar o líder de ginásio?</h1></div>
+        <div class="descricao_text2"><h1>Quer vencer a liga Pokémon?</h1></div>
+        <div class="descricao_text3"><h1>Não quer mais ser chamado de <strong>noobão</strong>?</h1></div>
+        <div class="descricao_text4"><h1>Temos a solução para você!</h1></div>
+        <div class="descricao_text5"><h1>A elite dos 4 tem os pokémons com os melhores <abbr title="individual values" lang="en">IVs</abbr> para você não passar mais vergonha.</h1></div>
+        <div class="descricao_text6"><h1>Você também pode ser <strong>campeão</strong>!</h1></div>
     </div>
     <div id="depoimentos">
         <div class="depoimentos_header">             
@@ -95,11 +95,11 @@
             <img class="imagem_depoente" title="campeão da liga pokémon de Alola" src="./src/assets/images/elements/depoentes/ash.jpeg" alt="Ash Ketchum">
             <div class="avaliacao_comentario">
                 <span class="icone-esquerda" aria-label="A avaliação é equivalente a 5 estrelas">Avaliação:
-                    <img src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
-                    <img src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
-                    <img src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
-                    <img src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
-                    <img src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
+                    <img title="pikachu" src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
+                    <img title="pikachu" src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
+                    <img title="pikachu" src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
+                    <img title="pikachu" src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
+                    <img title="pikachu" src="./src/assets/images/elements/icones/pikachu.png" alt="ícone de pikachu">
                 </span>
                 <blockquote>Foi por um bom motivo que o traço ficou horrível. 
                 20 anos de frustração até que eu vendi o que tinha e o que não tinha e consegui 
@@ -112,11 +112,11 @@
             <img class="imagem_depoente" title="campeão da liga pokémon de Hoenn" src="./src/assets/images/elements/depoentes/steven.jpeg" alt="Steven Stone">
             <div class="avaliacao_comentario">
                 <span class="icone-direita" aria-label="A avaliação é equivalente a 5 estrelas">Avaliação:
-                    <img src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
-                    <img src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
-                    <img src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
-                    <img src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
-                    <img src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
+                    <img title="aron" src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
+                    <img title="aron" src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
+                    <img title="aron" src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
+                    <img title="aron" src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
+                    <img title="aron" src="./src/assets/images/elements/icones/aron.png" alt="ícone de aron">
                 </span>
                 <blockquote>Quando o <dfn title="campeão prévio de Hoenn">Wallace</dfn> dropou o título para ir para Sootopolis virar líder de ginásio, 
                     eu não iria perder a oportunidade. Pedi o meu <i>metagross shiny</i> e o sucesso foi tanto que o campeão canônico 
@@ -128,11 +128,11 @@
             <img class="imagem_depoente" title="campeão da liga pokémon de Unova" src="./src/assets/images/elements/depoentes/iris.jpeg" alt="Iris">
             <div class="avaliacao_comentario">
                 <span class="icone-esquerda" aria-label="A avaliação é equivalente a 5 estrelas">Avaliação:
-                    <img src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
-                    <img src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
-                    <img src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
-                    <img src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
-                    <img src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
+                    <img title="axew" src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
+                    <img title="axew" src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
+                    <img title="axew" src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
+                    <img title="axew" src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
+                    <img title="axew" src="./src/assets/images/elements/icones/axew.png" alt="ícone de axew">
                 </span>
                 <blockquote>Quando vi que o Ash ganhou o campeonato, imediatamente pedi os meus e não pude acreditar. 
                     A casa caiu para a <dfn>volcarona</dfn> do <dfn title="campeão prévio de Unova">Alder</dfn>!
@@ -143,13 +143,13 @@
             <img class="imagem_depoente" title="campeão da liga pokémon de Galar" src="./src/assets/images/elements/depoentes/leon.jpeg" alt="Leon">
             <div class="avaliacao_comentario">
                 <span class="icone-direita" aria-label="A avaliação é equivalente a 5 estrelas">Avaliação:
-                    <img src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
-                    <img src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
-                    <img src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
-                    <img src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
-                    <img src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
+                    <img id="estrela_charmander" title="charmander" src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
+                    <img title="charmander" src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
+                    <img title="charmander" src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
+                    <img title="charmander" src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
+                    <img title="charmander" src="./src/assets/images/elements/icones/charmander.png" alt="ícone de charmander">
                 </span>
-                <blockquote>O meu <dfn>charizard</dfn> é da elite dos 4. Não conseguia encontrar um charmander com <abbr title="individual value" lang="en">IV</abbr> bom porque a competição era muito alta.  
+                <blockquote>O meu <i>charizard</i> é da elite dos 4. Não conseguia encontrar um <i>charmander</i> com <abbr title="individual value" lang="en">IV</abbr> bom porque a competição era muito alta.  
                     Agradeço à elite pelos serviços prestados!
                 </blockquote>
             </div>
