Boas práticas e carregamento de imagem
Realizei mudanças na localização dos arquivos js para views/components
e fiz as adaptações necessárias. Também coloquei para fazer um
carregamento prévio das imagens que aparecem da seção de descrição
após a passagem pelo mouse.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     <audio class="swampert" preload="auto">
         <source src="./src/assets/audios/elements/pokemon/swampert.ogg"></source>
     </audio>
-    <img id="fundo_email" src="./src/assets/images/background/fundo_email.gif">    
+    <img id="fundo_email" class="preload" src="./src/assets/images/background/fundo_email.gif">    
+    <img class="preload" src="./src/assets/images/background/descricao11.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao22.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao33.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao44.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao55.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao66.jpeg">    
 </head>
 <body>
     <header>
@@ -297,8 +303,8 @@
             </div>
         </div>
     </footer> 
-    <script src="./src/service/pokemon_cry.js"></script>
-    <script src="./src/service/background-email.js"></script>
-    <script src="./src/service/storage.js"></script>
+    <script src="./src/views/components/pokemon_cry.js"></script>
+    <script src="./src/views/components/background-email.js"></script>
+    <script src="./src/views/components/storage.js"></script>
 </body>
 </html>
