Modificações nas seções pokémon, email e funções JS
Coloquei a funcionalidade de alertar o usuário quando
ele deixar o campo vazio, coloquei sombra nas imagens
na seção pokémon.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -162,15 +162,18 @@
         </div>
     </div>
     <div id="email">
-        <h1>Cadastre-se e receba as ofertas primeiro!</h1>
-        <div>
-            <input id="user_name" placeholder="Nome"type="text">
-            <input id="user_email" placeholder="email@exemplo.com.br" type="text">
-            <button onclick="storage()">CADASTRAR</button>
+        <div id="email_text_background">
+            
+            <h1>Cadastre-se e receba as ofertas primeiro!</h1>
+            <div>
+                <input id="user_name" placeholder="Nome"type="text">
+                <input id="user_email" placeholder="email@exemplo.com.br" type="text">
+                <button onclick="storage()">CADASTRAR</button>
+            </div>
         </div>
     </div>
     <div id="pokemon">
-        <img class= "side_images" src="./src/assets/images/background/background-left.jpeg" alt="Ask Ketchum olhando desafiadoramente para Gary Carvalho">
+        <img class= "side_images shadows_left" src="./src/assets/images/background/background-left.jpeg" alt="Ask Ketchum olhando desafiadoramente para Gary Carvalho">
         <div>
             <img class="bisharp" src="./src/assets/images/elements/pokemon/bisharp.gif" alt="Bisharp">    
             <ul>
@@ -239,7 +242,7 @@
             </ul>
             <button>Compre!</button>
         </div>
-        <img class= "side_images" src="./src/assets/images/background/background-right.jpeg" alt="Gary Carvalho olhando desafiadoramente para Ash Ketchum">
+        <img class= "side_images shadows_right" src="./src/assets/images/background/background-right.jpeg" alt="Gary Carvalho olhando desafiadoramente para Ash Ketchum">
     </div>
     <div id="parceiros">
         <h1>Parceiros</h1>
