Corrigi as cores da seção de descrição

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +7,24 @@
     <title>Black Friday - Elite dos 4</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./src/assets/images/elements/favicon/site.ico">
-    <link rel="stylesheet" href="./src/css/styles.css">
-    <link rel="stylesheet" href="./src/css/header.css">
-    <link rel="stylesheet" href="./src/css/apresentacao.css">
-    <link rel="stylesheet" href="./src/css/descricao.css">
-    <link rel="stylesheet" href="./src/css/depoimentos.css">
-    <link rel="stylesheet" href="./src/css/email.css">
-    <link rel="stylesheet" href="./src/css/pokemon.css">
-    <link rel="stylesheet" href="./src/css/parceiros.css">
-    <link rel="stylesheet" href="./src/css/footer.css">
+    <link rel="stylesheet" type="text/css"href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap">
+    <link rel="stylesheet" type="text/css" href="./src/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/header.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/apresentacao.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/descricao.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/depoimentos.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/email.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/pokemon.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/parceiros.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/footer.css">
+    <link rel="icon" type="image/x-icon" href="./src/assets/images/elements/favicon/site.ico">
+    <img id="fundo_email" class="preload" src="./src/assets/images/background/fundo_email.gif">    
+    <img class="preload" src="./src/assets/images/background/descricao11.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao22.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao33.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao44.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao55.jpeg">    
+    <img class="preload" src="./src/assets/images/background/descricao66.jpeg"> 
     <audio class="bisharp" preload="auto">
         <source src="./src/assets/audios/elements/pokemon/bisharp.ogg"></source>
     </audio>
@@ -26,14 +33,7 @@
     </audio>
     <audio class="swampert" preload="auto">
         <source src="./src/assets/audios/elements/pokemon/swampert.ogg"></source>
-    </audio>
-    <img id="fundo_email" class="preload" src="./src/assets/images/background/fundo_email.gif">    
-    <img class="preload" src="./src/assets/images/background/descricao11.jpeg">    
-    <img class="preload" src="./src/assets/images/background/descricao22.jpeg">    
-    <img class="preload" src="./src/assets/images/background/descricao33.jpeg">    
-    <img class="preload" src="./src/assets/images/background/descricao44.jpeg">    
-    <img class="preload" src="./src/assets/images/background/descricao55.jpeg">    
-    <img class="preload" src="./src/assets/images/background/descricao66.jpeg">    
+    </audio>   
 </head>
 <body>
     <header>
